--- a/src/styles/SearchPage.css
+++ b/src/styles/SearchPage.css
@@ -6,6 +6,8 @@
 .search_page__inputs input {
   text-align: center;
   margin-bottom: 1rem;
+  padding: .7rem;
+  font-size: x-large;
 }
 
 .search_page__inputs button {
